# KbtuWebDev2025

./: README.md  index.html
DeferrableView/: README.md  angular.json  package-lock.json  package.json
DeferrableView/src/: index.html
Lab1/: index.html
Lab1/khanacademy/: 1-write-a-poem.html  10-jump-around.html  11-the-dinner-table.html  13-fancy-font-families.html  14-great-big-font-sizes.html  15-famous-font-families.html  16-blog.html  (+16 more)
Lab4/: info.txt
Lab8/shop_back/: .env  db.sqlite3  pyproject.toml
Lab8/shop_back/api/urls/: category.py  product.py  urls.py
Lab8/shop_back/api/views/: category.py  category_products.py  product.py
Lab8/shop_back/category/: admin.py  converters.py  models.py  serializers.py  service.py  value_objects.py
Lab8/shop_back/category/migrations/: 0001_initial.py
Lab8/shop_back/common/: value_objects.py
Lab8/shop_back/product/: admin.py  converters.py  models.py  serializers.py  service.py  value_objects.py
Lab8/shop_back/product/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_product_category.py
Lab8/shop_back/shop_back/: asgi.py  settings.py  urls.py  wsgi.py
Lab9/hh_back/: db.sqlite3  for_tests  pyproject.toml
Lab9/hh_back/application/dto/: company.py  vacancy.py
Lab9/hh_back/application/services/: company.py  vacancy.py
Lab9/hh_back/config/: settings.py  urls.py
Lab9/hh_back/domain/models/: company.py  enums.py  vacancy.py  value_objects.py
Lab9/hh_back/domain/repositories/: company.py  vacancy.py
Lab9/hh_back/infrastructure/: admin.py
Lab9/hh_back/infrastructure/api/: urls.py  views.py
Lab9/hh_back/infrastructure/migrations/: 0001_initial.py
Lab9/hh_back/infrastructure/models/: company.py  vacancy.py
Lab9/hh_back/infrastructure/repositories/: django_company.py  django_vacancies.py
Lab9/hh_back/infrastructure/services/: sort_adapter.py
(+284 files in other folders)
